--- a/HeroesOfPymoli/Game.ipynb
+++ b/HeroesOfPymoli/Game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "0           576"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,31 +348,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Count</th>        <th class=\"col_heading level0 col1\" >Percentage of Players</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8level0_row0\" class=\"row_heading level0 row0\" >Male</th>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row0_col0\" class=\"data row0 col0\" >484</td>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row0_col1\" class=\"data row0 col1\" >84.03%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8level0_row1\" class=\"row_heading level0 row1\" >Female</th>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row1_col0\" class=\"data row1 col0\" >81</td>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row1_col1\" class=\"data row1 col1\" >14.06%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row2_col0\" class=\"data row2 col0\" >11</td>\n",
+       "                        <td id=\"T_e79436e6_bbd7_11ec_8c01_b89a2a7530b8row2_col1\" class=\"data row2 col1\" >1.91%</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
       "text/plain": [
-       "3"
+       "<pandas.io.formats.style.Styler at 0x1e4089dab00>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped_gender_df = purchase_data.groupby([\"Gender\"])\n",
-    "male_count = len(grouped_gender_df[\"SN\"].unique())\n",
-    "male_count\n",
-    "#Non_duplicate_df = purchase_data[[\"SN\"].unique()]\n",
+    "Demo = purchase_data.loc[:,[\"Gender\",\"SN\",\"Age\",]]\n",
+    "Demo = Demo.drop_duplicates()\n",
     "\n",
-    "#Male_total = len(Total_Player[Total_Player[\"Gender\"] == \"Male\"])\n",
+    "Male_count= len(Demo[Demo[\"Gender\"] == \"Male\"])\n",
+    "#Male_count\n",
+    "Female_count= len(Demo[Demo[\"Gender\"]== \"Female\"])\n",
+    "#Female_count\n",
+    "Other_count = len(Demo[Demo[\"Gender\"]== \"Other / Non-Disclosed\"])\n",
+    "#Other_count\n",
+    "#Total_Player *already calculated above or Count = len(Demo[\"Gender\"])\n",
+    "Percentage_male = (Male_count/Total_Player)*100\n",
+    "Percentage_female = (Female_count/Total_Player)*100\n",
+    "Percentage_other = (Other_count/Total_Player)*100\n",
+    "\n",
+    "Gender_demographics_df = pd.DataFrame({\"Gender\": [\"Male\",\"Female\",\"Other / Non-Disclosed\"],\"Total Count\": [Male_count,Female_count,Other_count],\"Percentage of Players\": [Percentage_male,Percentage_female,Percentage_other]})\n",
+    "\n",
+    "#Formatting % and 2 decimal places\n",
+    "Gender_demographics_df_final= Gender_demographics_df.set_index(\"Gender\")\n",
+    "Gender_demographics_df_final.style.format({\"Percentage of Players\": \"{:.2f}%\"})\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purchasing Analysis (Gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.065371900826446"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total Purchase counts\n",
+    "Purchase_Cfemale= len(purchase_data[purchase_data[\"Gender\"] ==\"Female\"]) \n",
+    "Purchase_Cmale = len(purchase_data[purchase_data[\"Gender\"] ==\"Male\"])\n",
+    "Purchase_Cother = len(purchase_data[purchase_data[\"Gender\"] ==\"Other / Non-Disclosed\"])\n",
+    "#Total purchase value\n",
+    "TPurchase_value_M = purchase_data[purchase_data[\"Gender\"] ==\"Male\"][\"Price\"].sum()\n",
+    "TPurchase_value_F = purchase_data[purchase_data[\"Gender\"] ==\"Female\"][\"Price\"].sum()\n",
+    "TPurchase_value_O = purchase_data[purchase_data[\"Gender\"] ==\"Other / Non-Disclosed\"][\"Price\"].sum()\n",
+    "\n",
+    "#Average Purchase Price\n",
+    "Average_Female = (TPurchase_value_F/Purchase_Cfemale)\n",
+    "Average_Male = (TPurchase_value_M/Purchase_Cmale)\n",
+    "Average_other = (TPurchase_value_O/Purchase_Cother)\n",
+    "\n",
+    "#Average total purchase per person (use counts from table with removed duplicates)\n",
+    "Average_TPPP_male= (TPurchase_value_M/Male_count)\n",
+    "Average_TPPP_female= (TPurchase_value_F/Female_count)\n",
+    "Average_TPPP_Other = (TPurchase_value_O/Other_count)\n",
+    "#Create data frame\n",
+    "Purchasing_Analysis_Gender_df = pd.DataFrame({\"Gender\": [\"Male\",\"Female\",\"Other / Non-Disclosed\"],\"Purchase count\": [Male_count,Female_count,Other_count],\"Percentage of Players\": [Percentage_male,Percentage_female,Percentage_other]})\n"
    ]
   }
  ],
