--- a/PyCitySchools/School.ipynb
+++ b/PyCitySchools/School.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[39170 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "0               81.8778        74.9809           85.8055           65.1723  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,42 +1817,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create bins for segmenting and sorting data\n",
-    "size_bins = [Charter , district]\n",
-    "\n",
-    "# Define name for each data that falls in each interval index(bin) \n",
-    "school_size_name = ['Small (<1000)', 'Medium (1000-2000)', 'Large (2000-5000)']\n",
-    "\n",
-    "# Categorize data\n",
-    "# * Adding another column to identify data by bins\n",
-    "# * Apply pd.cut() to segment and sort data values into bins \n",
-    "#   (include_lowest=True > The first interval will be inclusive)\n",
-    "city_schools_summary_df['School Size'] = pd.cut(city_schools_summary_df['Total Students'], \n",
-    "                                                size_bins, \n",
-    "                                                labels=school_size_name, \n",
-    "                                                include_lowest=True)\n",
     "\n",
     "# Grouping dataframe based on School Size\n",
-    "school_size_grouped = city_schools_summary_df.groupby(['School Size'])\n",
+    "school_type_grouped = city_schools_summary_df.groupby(['School Type'])\n",
     "\n",
     "# Calculate the average scores by school size\n",
-    "math_by_size = school_size_grouped['Average Math Score'].mean()\n",
-    "reading_by_size = school_size_grouped['Average Reading Score'].mean()\n",
-    "percent_math_size = school_size_grouped['% Passing Math'].mean()\n",
-    "percent_reading_size = school_size_grouped['% Passing Reading'].mean()\n",
-    "percent_overall_size = school_size_grouped['% Overall Passing'].mean()\n",
+    "math_by_size1 = school_type_grouped['Average Math Score'].mean()\n",
+    "reading_by_size1 = school_type_grouped['Average Reading Score'].mean()\n",
+    "percent_math_size1 = school_type_grouped['% Passing Math'].mean()\n",
+    "percent_reading_size1 = school_type_grouped['% Passing Reading'].mean()\n",
+    "percent_overall_size1 = school_type_grouped['% Overall Passing'].mean()\n",
     "\n",
     "# Create the dictionary to hold the results\n",
     "scores_by_school_size_dict = {\n",
-    "    'Average Math Score': math_by_size,\n",
-    "    'Average Reading Score': reading_by_size,\n",
-    "    '% Passing Math': percent_math_size,\n",
-    "    '% Passing Reading': percent_reading_size,\n",
-    "    '% Overall Passing': percent_overall_size\n",
+    "    'Average Math Score': math_by_size1,\n",
+    "    'Average Reading Score': reading_by_size1,\n",
+    "    '% Passing Math': percent_math_size1,\n",
+    "    '% Passing Reading': percent_reading_size1,\n",
+    "    '% Overall Passing': percent_overall_size1\n",
     "}\n",
     "\n",
     "# Create the dataframe to hold the result dictionary\n",
